chore: controller docs
