# server/api/swagger.json
@@ -15,7 +15,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "authentication"
                 ],
                 "summary": "Authenticate user",
                 "operationId": "login",
@@ -56,7 +56,7 @@
             "post": {
                 "description": "Logout the authenticated user",
                 "tags": [
-                    "Authentication"
+                    "authentication"
                 ],
                 "summary": "Logout user",
                 "operationId": "logout",
@@ -83,7 +83,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "authentication"
                 ],
                 "summary": "Register user",
                 "operationId": "register",
@@ -138,7 +138,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chats"
+                    "chats"
                 ],
                 "summary": "Get my chats",
                 "operationId": "GetMyChats",
@@ -163,7 +163,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chats"
+                    "chats"
                 ],
                 "summary": "Create a new chat",
                 "operationId": "CreateChat",
@@ -195,7 +195,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chats"
+                    "chats"
                 ],
                 "summary": "Get chat by ID",
                 "operationId": "GetChatByID",
@@ -228,7 +228,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Chats"
+                    "chats"
                 ],
                 "summary": "Get chat messages",
                 "operationId": "GetChatMessages",
@@ -273,7 +273,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Server"
+                    "miscellaneous"
                 ],
                 "summary": "Get server information",
                 "operationId": "getServerInfo",
@@ -294,7 +294,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Server"
+                    "miscellaneous"
                 ],
                 "summary": "Get server configuration",
                 "operationId": "getServerConfig",
@@ -320,6 +320,31 @@
                 "summary": "Get current user",
                 "operationId": "getMyself",
                 "responses": {}
+            }
+        },
+        "/ws": {
+            "get": {
+                "description": "Establish a WebSocket connection for real-time communication",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "miscellaneous"
+                ],
+                "summary": "Handle WebSocket connections",
+                "operationId": "handleWebSocket",
+                "responses": {
+                    "101": {
+                        "description": "Switching Protocols",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
             }
         }
     },
