# server/internal/app/apiserver/http/controller/server.go
@@ -15,12 +15,12 @@ func NewServerController() *ServerController {
 	return &ServerController{}
 }
 
-// HandleAbout
+// HandleAbout retrieves the server information
 //
 //	@Summary		Get server information
 //	@Description	Get information about the server
 //	@Id				getServerInfo
-//	@Tags			Server
+//	@Tags			miscellaneous
 //	@Produce		json
 //	@Success		200	{object}	dto.ServerInfo
 //	@Router			/server/about [get]
@@ -30,12 +30,12 @@ func (c *ServerController) HandleAbout(w http.ResponseWriter, r *http.Request) {
 	})
 }
 
-// HandleConfig
+// HandleConfig retrieves the server configuration
 //
 //	@Summary		Get server configuration
 //	@Description	Get server configuration
 //	@Id				getServerConfig
-//	@Tags			Server
+//	@Tags			miscellaneous
 //	@Produce		json
 //	@Success		200	{object}	dto.ServerConfig
 //	@Router			/server/config [get]
